ccg007 fix bug #88001

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/a/index.xhtml
@@ -34,7 +34,8 @@
 											required: false,
 											option: {textmode: 'text',width: '200px'}, 
 											enable: true,
-											readonly: false}" />
+											readonly: false,
+											enterkey: AuthContract}" />
 								</div>
 							</td>
 						</tr>
@@ -53,7 +54,8 @@
 											required: false,
 											option: {textmode: 'password',width: '200px'},
 											enable: true,
-											readonly: false}" />
+											readonly: false,
+											enterkey: AuthContract}" />
 								</div>
 							</td>
 						</tr>
