update UI cmf001 i,j

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/i/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/i/index.xhtml
@@ -56,7 +56,7 @@
 						</td>
 						<td><input
 							data-bind="ntsTextEditor: {
-									value: valueTexBox,
+									value: fixedValue,
 									enable: isEditMode,
 									option : {width : '200px'}}" />
 						</td>
