--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/d.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/d.xhtml
@@ -27,6 +27,7 @@
 			<td>
 				<div  data-bind="with: texteditorD9">
 					<input tabindex="2" data-bind="ntsTextEditor: {
+						name:'#{i18n.getText('KAF022_179')}',
 						value: value,
 						constraint: constraint,
 						option: option,
@@ -45,6 +46,7 @@
 			<td>
 				<div data-bind="with: texteditorD12">
 					<input  tabindex="5" data-bind="ntsTextEditor: {
+						name:'#{i18n.getText('KAF022_180')}',
 						value: value,
 						constraint: constraint,
 						option: option,
