--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/e.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/e.xhtml
@@ -83,6 +83,7 @@
 			<td>
 				<div  data-bind="with: texteditorE13">
 					<input tabindex="5" data-bind="ntsTextEditor: {
+						name:'#{i18n.getText('KAF022_179')}',
 						value: value,
 						constraint: constraint,
 						option: option,
@@ -100,6 +101,7 @@
 			<td>
 				<div  data-bind="with: texteditorE16">
 					<input tabindex="8" data-bind="ntsTextEditor: {
+						name:'#{i18n.getText('KAF022_180')}',
 						value: value,
 						constraint: constraint,
 						option: option,
