--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/f.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/f.xhtml
@@ -95,6 +95,7 @@
 			<td>
 				<div  data-bind="with: texteditorF15">
 					<input tabindex="7" data-bind="ntsTextEditor: {
+						name:'#{i18n.getText('KAF022_179')}',
 						value: value,
 						constraint: constraint,
 						option: option,
@@ -112,6 +113,7 @@
 			<td>
 				<div  data-bind="with: texteditorF16">
 					<input tabindex="10" data-bind="ntsTextEditor: {
+						name:'#{i18n.getText('KAF022_180')}',
 						value: value,
 						constraint: constraint,
 						option: option,
