--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/j.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/j.xhtml
@@ -173,6 +173,7 @@
 				<div data-bind="with: texteditorJ29">
 					<input tabindex="12"
 						data-bind="ntsTextEditor: {
+						name:'#{i18n.getText('KAF022_256')}',
 						value: value,
 						constraint: constraint,
 						option: option,
@@ -193,6 +194,7 @@
 				<div data-bind="with: texteditorJ32">
 					<input tabindex="15"
 						data-bind="ntsTextEditor: {
+						name:'#{i18n.getText('KAF022_257')}',
 						value: value,
 						constraint: constraint,
 						option: option,
