--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
@@ -33,6 +33,7 @@
 				nts.uk.ctx.at.request.dom.setting.company.applicationapprovalsetting.vacationapplicationsetting.ObstacleName
 				nts.uk.ctx.at.request.dom.setting.company.applicationapprovalsetting.hdapplicationsetting.NameWork
 				nts.uk.ctx.at.request.dom.setting.company.applicationapprovalsetting.triprequestsetting.Comment
+				nts.uk.shr.com.time.AttendanceClock
 			</com:ValidatorScript>
 			<com:EnumScript>
 				nts.uk.ctx.at.request.dom.application.ApplicationType
@@ -181,7 +182,7 @@
 												columns: [
 													{ prop: 'name', length: 2 },
 												]}"></div>
-											<span class="label" tabindex="18">#{i18n.getText('KAF022_40')}</span>
+											<span class="label" tabindex="-1">#{i18n.getText('KAF022_40')}</span>
 										</td>
 									</tr>
 									<tr>
@@ -395,7 +396,7 @@
 														tabindex:42 
 													}">#{i18n.getText('KAF022_61')}</div></td>
 										<td><span class="ntsControl"> <label
-												class="ntsRadioBox"> <input 
+												class="ntsRadioBox" tabindex="43"> <input 
 													type="radio" name="textRadioA7_18"
 													data-bind="checkedValue: 0, checked: retrictPreMethodFlg, enable: true,attr:{
 														tabindex:43
@@ -419,7 +420,7 @@
 													}">
 											</span> <span class="label" id="a7_21">#{i18n.getText('KAF022_65')}</span>
 
-											<span class="ntsControl special-a7"> <label class="ntsRadioBox">
+											<span class="ntsControl special-a7"> <label class="ntsRadioBox" tabindex="45">
 
 													<input  type="radio" name="textRadioA7_18"
 													data-bind="checkedValue: 1, checked: retrictPreMethodFlg, enable: true,attr:{
@@ -506,19 +507,19 @@
 										<td class="color-header"><span  id="a8_8" class="label" data-bind="text:appTypeName"></span></td>
 										<td><div 
 												data-bind="ntsCheckBox: { checked: displayFixedReason },attr:{
-														tabindex:84 + $index()*6
+														tabindex:87 + $index()*6
 													}">#{i18n.getText('KAF022_61')}</div></td>
 										<td><div 
 												data-bind="ntsCheckBox: { checked: displayAppReason },attr:{
-														tabindex:85 + $index()*6
+														tabindex:88 + $index()*6
 													}">#{i18n.getText('KAF022_61')}</div></td>
 										<td><div 
 												data-bind="ntsCheckBox: { checked: sendMailWhenRegister },attr:{
-														tabindex:86 + $index()*6
+														tabindex:89 + $index()*6
 													}">#{i18n.getText('KAF022_75')}</div></td>
 										<td><div 
 												data-bind="ntsCheckBox: { checked: sendMailWhenApproval },attr:{
-														tabindex:87 + $index()*6
+														tabindex:90 + $index()*6
 													}">#{i18n.getText('KAF022_75')}</div></td>
 										<td>
 											<div  id="a4_7"
@@ -533,13 +534,13 @@
 													columns: [
 														{ prop: 'name', length: 6 }
 													]},attr:{
-														tabindex:88 + $index()*6
+														tabindex:91 + $index()*6
 													}">
 											</div>
 										</td>
 										<td><div
 												data-bind="ntsCheckBox: { checked: canClassificationChange },attr:{
-														tabindex:89 + $index()*6
+														tabindex:92 + $index()*6
 													}">#{i18n.getText('KAF022_75')}</div></td>
 									</tr>
 			
@@ -873,7 +874,7 @@
 										<td class="color-header" id="a16_2"><div data-bind="ntsFormLabel: { constraint: 'Subject',inline:true}">#{i18n.getText('KAF022_111')}</div></td>
 										<td>
 											<div data-bind="with: texteditorA16_7">
-												<input tabindex="237" data-bind="ntsTextEditor: {
+												<input tabindex="261" data-bind="ntsTextEditor: {
 													name:'#{i18n.getText('KAF022_111')}',
 													value: value,
 													constraint: constraint,
@@ -887,7 +888,7 @@
 									<tr>
 										<td  class="color-header" id="a16_3"><div data-bind="ntsFormLabel: { constraint: 'Content',inline:true}">#{i18n.getText('KAF022_112')}</div></td>
 										<td>
-											<div tabindex="238" data-bind="with: texteditorA16_8">
+											<div tabindex="262" data-bind="with: texteditorA16_8">
 												<textarea data-bind="ntsTextEditor: {
 												    name:'#{i18n.getText('KAF022_112')}',
 													value: value,
@@ -903,7 +904,7 @@
 										<td class="color-header" id="a16_4"><div data-bind="ntsFormLabel: { constraint: 'Subject',inline:true}">#{i18n.getText('KAF022_113')}</div></td>
 										<td>
 											<div  data-bind="with: texteditorA16_9">
-												<input tabindex="239" data-bind="ntsTextEditor: {
+												<input tabindex="263" data-bind="ntsTextEditor: {
 												    name:'#{i18n.getText('KAF022_113')}',
 													value: value,
 													constraint: constraint,
@@ -917,7 +918,7 @@
 									<tr>
 										<td class="color-header" id="a16_5"><div data-bind="ntsFormLabel: { constraint: 'Content',inline:true}">#{i18n.getText('KAF022_114')}</div></td>
 										<td>
-											<div tabindex="240" data-bind="with: texteditorA16_10">
+											<div tabindex="264" data-bind="with: texteditorA16_10">
 												<textarea data-bind="ntsTextEditor: {
 													name:'#{i18n.getText('KAF022_114')}',
 													value: value,
@@ -932,7 +933,7 @@
 									<tr>
 										<td class="color-header" id="a16_6"><div data-bind="ntsFormLabel: { constraint: 'Subject',inline:true}">#{i18n.getText('KAF022_116')}</div></td>
 										<td>
-											<div tabindex="241" data-bind="with: texteditorA16_11">
+											<div tabindex="265" data-bind="with: texteditorA16_11">
 												<textarea data-bind="ntsTextEditor: {
 													name:'#{i18n.getText('KAF022_116')}',
 													value: value,
