--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/k.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/k.xhtml
@@ -80,6 +80,7 @@
 				<div data-bind="with: texteditorK17">
 					<input tabindex="6"
 						data-bind="ntsTextEditor: {
+						name:'#{i18n.getText('KAF022_265')}',
 						value: value,
 						constraint: constraint,
 						option: option,
@@ -100,6 +101,7 @@
 				<div data-bind="with: texteditorK20">
 					<input tabindex="9"
 						data-bind="ntsTextEditor: {
+						name:'#{i18n.getText('KAF022_266')}',
 						value: value,
 						constraint: constraint,
 						option: option,
