--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/006/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/006/a/index.xhtml
@@ -9,12 +9,12 @@
 	<ui:composition template="../../../../master/sidebar.xhtml">
 		<ui:define name="sidebar-head">
 			<com:scriptfile set="IGNITE" />
-			<com:stylefile path="/view/ccg/share/style.css" of="/nts.uk.com.web" />
+			<!-- <com:stylefile path="/view/ccg/share/style.css" of="/nts.uk.com.web" /> -->
 			<com:scriptfile path="/view/kcp/share/list.js" of="/nts.uk.com.web" />
 			<com:scriptfile path="/view/kcp/share/tree.js" of="/nts.uk.com.web" />
-			<com:scriptfile path="/view/ccg/share/ccg.service.js"
+			<!-- <com:scriptfile path="/view/ccg/share/ccg.service.js"
 				of="/nts.uk.com.web" />
-			<com:scriptfile path="/view/ccg/share/ccg.vm.js" of="/nts.uk.com.web" />
+			<com:scriptfile path="/view/ccg/share/ccg.vm.js" of="/nts.uk.com.web" /> -->
 			<com:stylefile path="kmk006.a.main.css" />
 			<com:scriptfile path="kmk006.a.service.js" />
 			<com:scriptfile path="../e/kmk006.e.service.js" />
