--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/g/cmf001.g.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/g/cmf001.g.style.css
@@ -1,9 +1,15 @@
+.dialog-title {
+  margin-left: 20px; 
+  margin-top: 10px;
+}
 .div-table {
   display: table;         
   width: 600px; 
   border: 0,
   background-color: #eee;          
   border-spacing: 5px; 
+  margin-left: 30px; 
+  margin-top: 20px;
 }
 .div-table-row {
   display: table-row;
@@ -26,4 +32,22 @@
   float: left; 
   display: table-column;         
   width: 130px;   
+}
+.dialog-contents{
+  width:550px;
+  height: 400px;
+}
+.radio-group{
+  margin-top:15px; 
+}
+.vertical-align{
+  display: inline;
+  position: relative; 
+  top: 10px;	
+}
+.label-vertical-center{
+	display: inline;
+   width:20px; 
+   top: -11px; 
+   position: relative;
 }
