update kaf022a text for timeeditor

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
@@ -430,6 +430,7 @@
 													<span> <input
 														id="a7_23" 
 														data-bind="ntsTimeEditor: {
+													name:'#{i18n.getText('KAF022_67')}',
 													value: retrictPreTimeDay,
 													constraint: 'AttendanceClock',
 								                    inputFormat: 'time',
