--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/a/index.xhtml
@@ -21,15 +21,15 @@
 				
 				<div class="image-button">
 					<div class="image-left">
-						<a href="../o/index.xhtml"><img src="../resource/外部受入A1.jpg"/></a>
+						<a tabindex="1" href="../o/index.xhtml"><img src="../resource/外部受入A1.jpg"/></a>
 					</div>
 					
 					<div class="image-left">
-						<a href="../b/index.xhtml"><img src="../resource/外部受入A2.jpg"/></a>
+						<a tabindex="2" href="../b/index.xhtml"><img src="../resource/外部受入A2.jpg"/></a>
 					</div>
 					
 					<div class="image-right">
-						<a href="../s/index.xhtm"><img src="../resource/外部受入A3.jpg"/></a>
+						<a tabindex="3" href="../s/index.xhtm"><img src="../resource/外部受入A3.jpg"/></a>
 					</div>
 				</div>
 			</div>
