--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/e.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/e.xhtml
@@ -109,8 +109,8 @@
 						enable: true,
 						readonly: readonly
 						}" />
-					<div tabindex="9" id="colorpicker" data-bind="ntsColorPicker: {value: $parent.valueE14_1, enable: true, width: 40}"/>
-					<div tabindex="10" data-bind="ntsCheckBox: { checked: $parent.enableE15_1 }">#{i18n.getText('KAF022_185')}</div>
+					<div tabindex="9" id="colorpicker" data-bind="ntsColorPicker: {value: $parent.valueE17, enable: true, width: 40}"/>
+					<div tabindex="10" data-bind="ntsCheckBox: { checked: $parent.enableE18 }">#{i18n.getText('KAF022_185')}</div>
 				</div>
 			</td>
 		</tr>
