update bug upload file

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/f/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/f/index.xhtml
@@ -35,8 +35,7 @@
 					aslink: asLink,
 					enable: enable,
 					uploadFinished:  uploadFinished,
-					immediateUpload: true,
-					stereoType: stereoType
+					immediateUpload: true
 					}"></div>
 				</div>
 				<table id="grid2"></table>
