cmf001: CHANGE WS STRUCTURE

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/b/index.xhtml
@@ -13,9 +13,6 @@
 			<com:scriptfile path="../share/model.js" />
 			<com:scriptfile path="cmf001.b.vm.js" />
 			
-<!-- 			<com:scriptfile path="../b/cas014.b.vm.js" /> -->
-<!-- 			<com:scriptfile path="../b/cas014.b.service.js" /> -->
-			
 			<com:scriptfile path="cmf001.b.start.js" />
 		</ui:define>
 		
@@ -23,10 +20,10 @@
 			<div id="functions-area">
 				<a class="goback" data-bind="ntsLinkButton: { jump: '../a/index.xhtml' }">#{i18n.getText('CMF001_37')}</a>
 				<button tabindex="1" data-bind="click: createNewCondition">#{i18n.getText('CMF001_29')}</button>
-				<button tabindex="2" data-bind="click: registerAlarmCheckCondition" class="proceed" >#{i18n.getText('CMF001_30')}</button>
+				<button tabindex="2" data-bind="click: registerCondition" class="proceed" >#{i18n.getText('CMF001_30')}</button>
 <!-- 					<button tabindex="3" >#{i18n.getText('CMF001_31')}</button> -->
 				<button tabindex="4" data-bind="click: openCMF001m">#{i18n.getText('CMF001_33')}</button>
-				<button tabindex="5" data-bind="click: deleteAlarmCheckCondition" class="danger" >#{i18n.getText('CMF001_34')}</button>
+				<button tabindex="5" data-bind="click: deleteCondition" class="danger" >#{i18n.getText('CMF001_34')}</button>
 			</div>
 			<div id="contents-area" class="fixed-flex-layout">
 				<div class="fixed-flex-layout-left">
