--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/kcp/share/tree.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/kcp/share/tree.xhtml
@@ -17,7 +17,7 @@
 		</com:ko>
 		<div data-bind="visible: !isMultipleUse">
 			<div data-bind="ntsFormLabel: {}">#{i18n.getText('KCP004_2')}</div>
-			<div class="base-date-editor"
+			<div class="base-date-editor" id="work-place-base-date"
 				style="margin-left: 17px; margin-right: 5px;"
 				data-bind="attr: {tabindex: isSetTabindex() ? tabindex : 1},
 				ntsDatePicker: {dateFormat: 'YYYY/MM/DD', value: baseDate, name:'#[KCP004_2]', required: true}"></div>
