--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/index.xhtml
@@ -32,6 +32,7 @@
 					nts.uk.shr.com.primitive.sample.ProcessingNo
 					nts.uk.shr.com.primitive.sample.CommonAmount
 					nts.uk.shr.com.time.TimeWithDayAttr
+					nts.uk.ctx.at.shared.dom.worktype.WorkTypeCode
 		    </com:ValidatorScript>
 		</ui:define>
 
