CMM045/KAF000: fix param url

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/cmm/045/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/cmm/045/a/index.xhtml
@@ -25,7 +25,7 @@
 				<!-- A1_1: Button 承認 -->
 				<button data-bind = "click: approval">#{i18n.getText('CMM045_3')}</button>
 				<!-- A1_2: Button 印刷 -->
-				<button>#{i18n.getText('CMM045_4')}</button>
+				<!-- <button>#{i18n.getText('CMM045_4')}</button> -->
 			</div>
 			<div id="content-area">
 				<div class="control-group table" style ="margin-top: 20px; margin-left: 20px">
