--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/005/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/005/b/index.xhtml
@@ -276,7 +276,7 @@
 												constraint: 'NumericItemMin',
 												option:  new nts.uk.ui.option.NumberEditorOption({
 												grouplength: 3,
-												decimalPart>8?8:decimalPart,
+												decimallength: decimalPart>8?8:decimalPart,
 									            	placeholder: '',
 									            	width: '80px',
 									            	textalign: 'left'
@@ -293,7 +293,7 @@
 												constraint: 'NumericItemMax',
 												option:  new nts.uk.ui.option.NumberEditorOption({
 												grouplength: 3,
-												decimalPart>8?8:decimalPart,
+												decimallength: decimalPart>8?8:decimalPart,
 									            	placeholder: '',
 									            	width: '80px',
 									            	textalign: 'left'
