--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/o/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/o/index.xhtml
@@ -216,11 +216,11 @@
 									<tr>
 										<td style="text-align: right;"></td>
 										<td style="text-align: left;"><div class="label"
-												data-bind="text: infoName"></div></td>
+												data-bind="text: acceptItemName"></div></td>
 										<td style="text-align: left;"><div class="label"
-												data-bind="text: itemName"></div></td>
+												data-bind="text: csvItemName"></div></td>
 										<td style="text-align: left;"><div class="label"
-												data-bind="text: sampleData"></div></td>
+												data-bind="text: acceptItemNumber"></div></td>
 										<td style="text-align: left;"><div class="label"
 												data-bind="text: itemType"></div></td>
 										<td style="text-align: center;"><i
