--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/f.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/f.xhtml
@@ -51,27 +51,27 @@
 				<div tabindex="4">
 					<div class="ntsControl blockrow">
 						<label  class="ntsRadioBox" >
-							<input type="radio" name="textRadio" data-bind="checkedValue: 0, checked: selectedValueF13, enable: true" />
+							<input type="radio" name="textRadioF" data-bind="checkedValue: 0, checked: selectedValueF13, enable: true" />
 							<span class="box"></span><span class="label" >#{i18n.getText('KAF022_198')}</span>
 						</label>
 					</div>
 					<div class="ntsControl blockrow">
 						<label  class="ntsRadioBox">
-							<input type="radio" name="textRadio" data-bind="checkedValue: 1, checked: selectedValueF13, enable: true" />
+							<input type="radio" name="textRadioF" data-bind="checkedValue: 1, checked: selectedValueF13, enable: true" />
 							<span class="box"></span><span class="label" >#{i18n.getText('KAF022_199')}</span>
 						</label>
 					</div>
 					<div id="e11_5" data-bind="ntsCheckBox: { checked: checkedF13_1, enable: enableF13_1 }">#{i18n.getText('KAF022_205')}</div>
 					<div class="ntsControl blockrow">
 						<label  class="ntsRadioBox">
-							<input type="radio" name="textRadio" data-bind="checkedValue: 2, checked: selectedValueF13, enable: true" />
+							<input type="radio" name="textRadioF" data-bind="checkedValue: 2, checked: selectedValueF13, enable: true" />
 							<span class="box"></span><span class="label">#{i18n.getText('KAF022_200')}</span>
 						</label>
 					</div>
 					
 					<div class="ntsControl blockrow">
 						<label  class="ntsRadioBox">
-							<input type="radio" name="textRadio" data-bind="checkedValue: 3, checked: selectedValueF13, enable: true" />
+							<input type="radio" name="textRadioF" data-bind="checkedValue: 3, checked: selectedValueF13, enable: true" />
 							<span class="box"></span><span class="label">#{i18n.getText('KAF022_201')}</span>
 						</label>
 					</div>
