fix bug KAF_009 a #87469

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/009/share/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/009/share/index.xhtml
@@ -13,7 +13,10 @@
 			<div data-bind="visible: screenModeNew" class="mode-style">
 				<div class="cf"
 					data-bind="ntsSwitchButton: {
-									options:prePostItems,
+									options:ko.observableArray([
+							                { prePostCode: 0, prePostName: '#{i18n.getText('KAF009_9')}' },
+							                { prePostCode: 1, prePostName: '#{i18n.getText('KAF009_10')}' }
+							                ]),
 									optionsValue: 'prePostCode',
 									optionsText: 'prePostName',
 									value: prePostSelected,
