--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
@@ -420,13 +420,14 @@
 													}">
 											</span> <span class="label" id="a7_21">#{i18n.getText('KAF022_65')}</span>
 
-											<span class="ntsControl special-a7"> <label class="ntsRadioBox" tabindex="45">
-
+											<span class="ntsControl special-a7"> <label class="ntsRadioBox" >
+													<span tabindex="45">
 													<input  type="radio" name="textRadioA7_18"
 													data-bind="checkedValue: 1, checked: retrictPreMethodFlg, enable: true,attr:{
 														tabindex:45 
 													}" />
 													<span class="box"></span><span class="label">#{i18n.getText('KAF022_66')}</span>
+													</span>
 													<span> <input
 														id="a7_23" 
 														data-bind="ntsTimeEditor: {
