--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/d/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/d/index.xhtml
@@ -26,7 +26,7 @@
 			<div id="functions-area">
 				<div class="container">
 					<button tabindex="1" class="proceed">#{i18n.getText('CMF001_130')}</button>
-					<button tabindex="2" >#{i18n.getText('CMF001_131')}</button>
+					<button tabindex="2" data-bind="click: openCMF001f">#{i18n.getText('CMF001_131')}</button>
 					<button tabindex="3" >#{i18n.getText('CMF001_132')}</button>
 				</div>
 			</div>
