- Edit cell color - Change header text and color

--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_ntsgrid.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_ntsgrid.scss
@@ -102,7 +102,7 @@
 .nts-grid tr.ui-ig-altrecord td.ntsgrid-manual-edit-other.ntsgrid-disable, 
 .nts-grid tr td.ntsgrid-manual-edit-other.ui-state-hover, 
 .nts-grid tr.ui-ig-altrecord td.ntsgrid-manual-edit-other.ui-state-hover {
-	background-color: orange;
+	background-color: #CEE6FF;
 }
 
 .nts-grid-wrapper table tr td.ntsgrid-manual-edit-target,
@@ -129,7 +129,7 @@
 .nts-grid tr.ui-ig-altrecord td.ntsgrid-manual-edit-target.ntsgrid-disable, 
 .nts-grid tr td.ntsgrid-manual-edit-target.ui-state-hover,
 .nts-grid tr.ui-ig-altrecord td.ntsgrid-manual-edit-target.ui-state-hover {
-	background-color: pink;
+	background-color: #94B7FE;
 }
 
 .nts-grid-wrapper table tr td.ntsgrid-alarm,
