--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
@@ -4059,7 +4059,7 @@ button.nts-switch-button[disabled]:hover {
 .nts-grid tr.ui-ig-altrecord td.ntsgrid-manual-edit-other.ntsgrid-disable,
 .nts-grid tr td.ntsgrid-manual-edit-other.ui-state-hover,
 .nts-grid tr.ui-ig-altrecord td.ntsgrid-manual-edit-other.ui-state-hover {
-  background-color: orange;
+  background-color: #CEE6FF;
 }
 
 /* line 108, ../sass/components/_ntsgrid.scss */
@@ -4087,7 +4087,7 @@ button.nts-switch-button[disabled]:hover {
 .nts-grid tr.ui-ig-altrecord td.ntsgrid-manual-edit-target.ntsgrid-disable,
 .nts-grid tr td.ntsgrid-manual-edit-target.ui-state-hover,
 .nts-grid tr.ui-ig-altrecord td.ntsgrid-manual-edit-target.ui-state-hover {
-  background-color: pink;
+  background-color: #94B7FE;
 }
 
 /* line 135, ../sass/components/_ntsgrid.scss */
