[CCG001] fix bug scroll on IE

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -124,7 +124,7 @@
 			<com:ko tag="if" bind="showAdvancedSearchTab">
 				<div tabindex="-1" class="tab-content-2 height-maximum">
 						<div id="ccg001-tab-content-2" class="height-maximum">
-							<div class="pull-left height-maximum" style="padding-right: 20px; overflow: overlay;">
+							<div class="pull-left height-maximum" style="padding-right: 20px; overflow: auto;">
 								<div>
 									<label>#{i18n.getText('CCG001_24')}</label>
 								</div>
