--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/l/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/l/index.xhtml
@@ -68,27 +68,32 @@
 								<input tabindex="2" data-bind="ntsTextEditor: {value: numberConditionValue1, 
 															     enable: $parent.screenMode == 0, 
 															     name: '#[CMF001_390]',
-															     required: true}, 
+															     required: true,
+															     optionsText: 'name'}, 
 																 visible: $parent.selectedDataType == nts.uk.com.view.cmf001.share.model.ITEM_TYPE.NUMERIC"/>
 								<input tabindex="4" data-bind="ntsTextEditor: {value: characterConditionValue1, 
 																 enable: $parent.screenMode == 0, 
 																 name: '#[CMF001_390]',
-																 required: true}, 
+																 required: true,
+																 optionsText: 'name'}, 
 																 visible: $parent.selectedDataType == nts.uk.com.view.cmf001.share.model.ITEM_TYPE.CHARACTER"/>
 								<input tabindex="6" data-bind="ntsTextEditor: {value: dateConditionValue1, 
 								                                 enable: $parent.screenMode == 0, 
 								                                 name: '#[CMF001_390]',
-								                                 required: true}, 
+								                                 required: true,
+								                                 optionsText: 'name'}, 
 																 visible: $parent.selectedDataType == nts.uk.com.view.cmf001.share.model.ITEM_TYPE.DATE"/>
 								<input tabindex="8" data-bind="ntsTextEditor: {value: timeMomentConditionValue1, 
 																 enable: $parent.screenMode == 0, 
 																 name: '#[CMF001_390]',
-																 required: true}, 
+																 required: true,
+																 optionsText: 'name'}, 
 																 visible: $parent.selectedDataType == nts.uk.com.view.cmf001.share.model.ITEM_TYPE.INS_TIME"/>
 								<input tabindex="10" data-bind="ntsTextEditor: {value: timeConditionValue1, 
 																 enable: $parent.screenMode == 0, 
 																 name:'#[CMF001_390]',
-																 required: true}, 
+																 required: true,
+																 optionsText: 'name'}, 
 																 visible: $parent.selectedDataType == nts.uk.com.view.cmf001.share.model.ITEM_TYPE.INS_TIME"/>
 							</td>
 						</tr>
