fixed UI  khi scroll thì caret cũng di chuyển theo

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/009/a/cps009.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/009/a/cps009.a.style.css
@@ -288,9 +288,9 @@ table tr td, table tr th {
 }
 
 span.caret-background.caret-right.direction-right {
-	position: fixed !important;
+	position: absolute;;
 	margin-top: 50px !important;
-	margin-left: 2px !important;
+	margin-left: -5px !important;
 }
 
 .table-container {
