[KMF002] update color button and set variable advance search of CCG001 is true

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
@@ -11,7 +11,7 @@
 		<div class="sidebar-content-header">
 			<span>#{i18n.getText('KMF002_30')}</span>
    			<!-- A2_1 -->
-   			<button tabindex="1" data-bind="click: save, attr : {'disabled' : false}, ">#{i18n.getText('KMF002_2')}</button>
+   			<button class="proceed" tabindex="1" data-bind="click: save, attr : {'disabled' : false}, ">#{i18n.getText('KMF002_2')}</button>
    			<!-- A2_2 -->
    			<button tabindex="2" data-bind="click: settingOfUsageUnit, attr : {'disabled' : isDisableSetUnitBtn}">#{i18n.getText('KMF002_26')}</button>
 		</div>
