--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/d/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/d/index.xhtml
@@ -11,9 +11,9 @@
 		<div class="sidebar-content-header">
 			<span>#{i18n.getText('Com_Employment')}</span>
    			<!-- D1_1 -->
-   			<button tabindex="1" data-bind="click: save, enable: enableSave">#{i18n.getText('KMF002_2')}</button>
+   			<button class="proceed" tabindex="1" data-bind="click: save, enable: enableSave">#{i18n.getText('KMF002_2')}</button>
    			<!-- D1_2 -->
-   			<button tabindex="2" data-bind="click: remove, enable: enableDelete">#{i18n.getText('KMF002_11')}</button>
+   			<button class="danger" tabindex="2" data-bind="click: remove, enable: enableDelete">#{i18n.getText('KMF002_11')}</button>
 		</div>
 		
 		<div id="scrD" class="contents-area">
